--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-web": "^0.19.9",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.66.1"
+    "sass": "^1.66.1",
+    "slider-moon": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
