add to .env file

--- a/src/.env
+++ b/src/.env
@@ -5,3 +5,7 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
 REACT_APP_FIREBASE_APP_ID=
 REACT_APP_FIREBASE_MEASUREMENT_ID=
+
+
+REACT_APP_LINKEDIN_CLIENT_ID=869jbfzkg1ho3l
+REACT_APP_LINKEDIN_REDIRECT_URI=coffee-chat-a47df.firebaseapp.com/linkedin-callback
