Changed user import path in Navbar and updated .env.sample file.

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_API_KEY=
-REACT_APP_FIREBASE_AUTH_DOMAIN=
-REACT_APP_FIREBASE_PROJECT_ID=
-REACT_APP_FIREBASE_STORAGE_BUCKET=
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
-REACT_APP_FIREBASE_APP_ID=
-REACT_APP_FIREBASE_MEASUREMENT_ID=
+REACT_APP_FIREBASE_API_KEY=AIzaSyDTDShSWIh1FCcfrOTjP6JCPkg0UlEpNyI
+REACT_APP_FIREBASE_AUTH_DOMAIN=coffee-chat-a47df.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=coffee-chat-a47df
+REACT_APP_FIREBASE_STORAGE_BUCKET=coffee-chat-a47df.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=433208987432
+REACT_APP_FIREBASE_APP_ID=1:433208987432:web:130287fea3c4e8d8a18a1d
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-YJ6XZ3QFMH
